src/app/pokedex/pokedex.component.scss
@import "../../assets/style/variables.scss";
@import "../../../node_modules/bootstrap/scss/mixins/_breakpoints.scss";

.pokedex-section {
    height: 100%;
    width: 100%;
    box-sizing: border-box;
    background-color: #f5f5f5;
    padding-top: 2rem;
}

/* Form */

.form-city {
    padding: 2rem 1rem 1rem 1rem;
}

.form-city .btn-search {
    height: 2.8125rem;
    border-radius: 6.25rem;
}

.form-city .btn-search .icon {
    margin-right: 0.625rem;
}

/* Content */

.content {
    width: 100%;
    box-sizing: border-box;
}

/* Weather Information */

.weather-information .info-list {
    height: 100%;
    list-style: none;
    display: flex;
    align-items: center;
}

.weather-information .info-list i {
    width: 2.5rem;
    text-align: center;
}

/* Pokemon Information */

.pokemon-information .pokemon-info {
    list-style: none;
    text-align: center;
}

.pokemon {
    height: calc(100% - 5rem);
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Error Screen */

.error-screen {
    width: 100%;
    height: 100%;
}

/* Loader Screen */

.loader-screen {
    width: 100%;
    height: 100%;
}

@include media-breakpoint-up(lg) {
    /* Form */

    .form-city {
        width: 100%;
        display: flex;
        justify-content: center;
    }

    .form-city app-form-input {
        width: 50%;
    }

    .form-city .btn-search {
        width: 7.5rem;
        margin-left: 1rem;
    }

    /* Content */

    .content {
        height: calc(100% - 6.875rem);
        display: flex;
        align-items: center;
    }

    /* Weather Information */

    .weather-information {
        width: 50%;
        font-size: 1.375rem;
    }

    .weather-information .info-list {
        justify-content: center;
    }

    .weather-information .info-list li {
        line-height: 4.375rem;
    }

    .weather-information .info-list i {
        font-size: 1.25rem;
    }

    .divider {
        height: 80%;
        width: 0.0625rem;
        background-color: $grey;
    }

    /* Pokemon Information */

    .pokemon-information {
        height: 80%;
        width: 50%;
        padding-top: 1rem;
    }

    .pokemon-information .pokemon-info {
        height: 5rem;
        font-size: 1.375rem;
        font-weight: bold;
    }

    .pokemon img {
        height: 12.5rem;
        width: auto;
    }
}

@include media-breakpoint-down(md) {
    .content {
        display: flexbox;
        justify-content: center;
    }
    /* Form */

    .form-city {
        width: 100%;
        text-align: center;
    }

    .form-city .btn-search {
        width: 10.625rem;
        margin-top: 0.5rem;
    }

    /* Content */

    .content {
        height: calc(100% - 10.3125rem);
    }

    /* Weather Information */

    .weather-information {
        width: 100%;
        font-size: 1.125rem;
    }

    .weather-information .info-list {
        padding-left: 1.25rem !important;
    }

    .weather-information .info-list li {
        line-height: 3.125rem;
    }

    .divider {
        display: none;
    }

    /* Pokemon Information */

    .pokemon-information {
        width: 100%;
        font-size: 1.125rem;
    }

    .pokemon-information .pokemon-info {
        height: 7rem;
        font-size: 1.375rem;
        font-weight: bold;
        display: block;
        padding: 0rem !important;
        line-height: 2.5rem;
        font-weight: bold;
        text-align: center;
    }

    .pokemon img {
        height: 9.375rem;
        width: auto;
    }
}

